Fixed gap below footer

--- a/style.css
+++ b/style.css
@@ -10,6 +10,19 @@ label {
 }
 /**********************/
 /* Webpage settings*/
+main {
+    position: relative;
+    min-height: 100vh;
+}
+#content {
+    padding-bottom: 5rem;
+}
+footer {
+    position: absolute;
+    bottom:0;
+    width: 100%;
+    height: 5rem;
+}
 
 .main {
     width: 100%;
